--- a/installer/resources/themes/console/dark/default.css
+++ b/installer/resources/themes/console/dark/default.css
@@ -151,7 +151,7 @@ hr {
 }
 
 .control {
-    margin :  0 4px 0 4px;
+    margin :  0 0 0 4px;
     padding : 0 0 2px 0;
     overflow : hidden;
     height : 20px; 
@@ -162,7 +162,7 @@ hr {
     border : 1px outset #ddddc0;
     text-align :  center;
     white-space : nowrap;
-    -moz-border-radius: 4px 4px 4px 4px;
+    -moz-border-radius: 4px;
 		border 1px solid #000022;
 		font-weight: bold;
     margin-top: 8px;
@@ -243,7 +243,7 @@ color:#ff6600
 }
 
 .header {
-	  -moz-border-radius: 4px;
+	  -moz-border-radius: 4px 4px 4px 4px;
 		border 1px solid #ff0000;
 }
 
