--- a/installer/resources/themes/console/dark/default.css
+++ b/installer/resources/themes/console/dark/default.css
@@ -33,12 +33,24 @@ h4, label {
     font-size :   1.0em;
     -moz-box-sizing: border-box;
     box-sizing :     border-box;
+		padding: 5px 0 !important;
 }
 
 h4 {
-    font-size : 1.2em;
+    font-size : 14px;
     text-align : center;
-    width : 750px;
+    width : 100%;
+		border: 1px solid #99f;
+		margin: 5px 0 15px 0;
+	  background: url(images/tabletitledark.png);
+	  background-color: #002;
+		text-transform: uppercase;
+	  text-shadow: 0px 0px 2px rgba(255, 255, 255, 0.9);
+		letter-spacing: 0.08em;
+    -moz-box-shadow: inset 0px 0px 4px 0px #009; 
+	  border-radius: 4px;
+	  -moz-border-radius: 4px;
+	  -webkit-border-radius: 4px;	
 }
 
 a {
@@ -131,11 +143,11 @@ hr {
     clear : both;
     height : 1px;
     margin : 3px 0px 3px 0px;
-    border-bottom : 1px solid #9999ff;
+    border-bottom : 1px solid #99f;
 }
 
 .subdivider {
-    border-bottom : 1px solid #9999ff;
+    border-bottom : 1px solid #99f;
     padding: 5px 0px 0px 0px;
 }
 
@@ -236,6 +248,8 @@ color:#ff6600
     background-color : #003;
   	border : 1px solid #f22;
 	  background: url(images/lightbluetile.png);
+		-moz-box-shadow: inset 0px 0px 4px 0px #f00; 
+		padding: 5px 20px 11px 10px !important;
 }
 
 #globalOperationsPanel .control {
