--- a/installer/resources/themes/console/light/default.css
+++ b/installer/resources/themes/console/light/default.css
@@ -33,12 +33,25 @@ h4, label {
     font-size :   1.0em;
     -moz-box-sizing: border-box;
     box-sizing :     border-box;
+		padding: 5px 0 !important;
 }
 
 h4 {
-    font-size : 1.2em;
+    font-size : 14px;
+ 		color: #001;
     text-align : center;
-    width : 750px;
+    width : 100%;
+		border: 1px solid #225;
+		margin: 5px 0 10px 0;
+	  background: url(images/tabletitlelight.png);
+	  background-color: #002;
+		text-transform: uppercase;
+	  text-shadow: 0px 0px 2px rgba(64, 64, 255, 0.9);
+		letter-spacing: 0.08em;
+    -moz-box-shadow: inset 0px 0px 4px 0px #bbf; 
+	  border-radius: 4px;
+	  -moz-border-radius: 4px;
+	  -webkit-border-radius: 4px;	
 }
 
 a {
@@ -188,7 +201,7 @@ color:#ff6600
 	  text-align : left;
     font-size : 0.8em;
 	  background-color : #fff;
-	  background: url(images/tabletile.png);
+	  background: url(images/lightbluetile.png);
 	  -moz-border-radius: 4px 4px 4px 4px;
 	  border: 1px solid #002;
 	  padding: 10px 20px;
@@ -227,7 +240,9 @@ color:#ff6600
 
 #globalOperationsPanel {
     background-color : #ddddff;
-	border : 1px solid #f22;
+	  border : 1px solid #f22;
+		-moz-box-shadow: inset 0px 0px 4px 0px #f00; 
+		padding: 5px 20px 11px 10px !important;
 }
 
 #globalOperationsPanel .control {
