--- a/installer/resources/themes/console/light/console.css
+++ b/installer/resources/themes/console/light/console.css
@@ -300,12 +300,18 @@ h1 {
 
 h2{
   color: #000011;
+  background-color: #ddf;
+	background-image: url('images/tabletile.png');
 	text-shadow: 0px 0px 1px rgba(0, 0, 128, 0.9);
 	border-bottom-width: 1px;
 	border-bottom-style: solid;
 	border-bottom-color: #000022;
-	padding-bottom: 5px;
+	padding: 5px;
 	wordwrap: none;
+	border: 1px solid #002;
+	border-radius: 4px;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;	
 } 
 
 h2 a:hover {
