Minor I2Ptunnels page tweakage..
Monotone-Parent: 41deb80bd50fa55f4adb349c1fb44d8f45eaf19c
Monotone-Revision: 6f1ed83a2b4e4373da99bcb742af48c1ab44d920

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-11T20:11:16
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/light/console.css
+++ b/installer/resources/themes/console/light/console.css
@@ -306,7 +306,7 @@ h2{
 	border-bottom-width: 1px;
 	border-bottom-style: solid;
 	border-bottom-color: #000022;
-	padding: 5px;
+	padding: 5px 10px;
 	wordwrap: none;
 	border: 1px solid #002;
 	border-radius: 4px;
@@ -323,12 +323,18 @@ h2 a:hover {
 	padding-bottom: 5px;
 } 
 
-
+h3 {
+	border-bottom-width: 1px;
+	border-bottom-style: solid;
+	border-bottom-color: #000022;
+	padding-bottom: 5px;
+}	
+	
 button { 
 border: 1px outset #ddddc0;
 padding: 0px 3px 1px 3px;
 line-height: 250%;
-background-color: #bbf;
+background-color: #bbf !important;
 text-decoration: none;
 	border-radius: 4px;
 	-moz-border-radius: 4px;
@@ -354,19 +360,19 @@ color:#ff6600
 	 }
 	 
 .langbox {
-	  margin: 12px 0px 15px 5px;
+	  margin: 4px 2px 15px 5px;
 	  padding: 7px 5px 5px 5px;
-	  border: 1px solid #002;
-	  background-color: #e4e4ff;
+/*	  border: 1px solid #002;
+	  background-color: #e4e4ff; */
 	  color: black;
-	  font-size: 8pt;
+	  font-size: 7pt;
 	  -moz-border-radius: 4px 4px 4px 4px;
 	  -webkit-border-radius: 4px 4px 4px 4px;		
 	  border-radius: 4px 4px 4px 4px;
 	  width:120px;
 	  text-align: center;
 		float: right;
-	  background-image:url('images/lightbluetile.png');
+/*	  background-image:url('images/lightbluetile.png');*/
 }
 
 hr {
