--- a/installer/resources/themes/console/light/console.css
+++ b/installer/resources/themes/console/light/console.css
@@ -1,434 +1,439 @@
 body {
-	font-family: "Lucida Sans Unicode", Verdana, Tahoma, Helvetica, sans-serif;
-	margin: 25px 10px 0 5px;
-	padding: 0em;
-	text-align: center;
-	background-color: #fff;
-	color: black;
-/*	font-size: 100%; */
-	font-size: 9pt;
+     font-family: "Lucida Sans Unicode", Verdana, Tahoma, Helvetica, sans-serif;
+     margin: 25px 10px 0 5px;
+     padding: 0em;
+     text-align: center;
+     background-color: #fff;
+     color: black;
+     font-size: 9pt;
 }
 
 .hide {
-	display: none;
+     display: none;
 }
 
 img {
-	border: none;
+     border: none;
 }
 
 pre {
-	width: 98%;
-	overflow-x: scroll;
-  text-align: left;
-	font-size: 8pt;
-	font-family: "Lucida Console", Courier, mono;
-	color: #333;
+     width: 98%;
+     overflow-x: scroll;
+     text-align: left;
+     font-size: 8pt;
+     font-family: "Lucida Console", "DejaVu Sans Mono", Courier, mono;
+     color: #333;
 }
 
 div.logo {
-	float: left;
-	left: 10px;
-	top: 0px;
-  padding: 10px 10px 10px 14px;
-	text-align: left;
-  font-color: #fff;
-	border: 0px solid #f00;
-	float: none;
-	margin: 0px;
-	background-color: #003;
-	display: block;
-	border: 1px solid #002;
-	display: none;
+     float: left;
+     left: 10px;
+     top: 0px;
+     padding: 10px 10px 10px 14px;
+     text-align: left;
+     font-color: #fff;
+     border: 0px solid #f00;
+     margin: 0px;
+     background-color: #003;
+     display: block;
 }
 
 div.toolbar {
-	margin: 0;
-	padding: 10px;
-	font-weight: bold;
-	background-color: #eeeeff
-	border: 1px solid #002;
-	display: none;
+     margin: 0;
+     padding: 10px;
+     font-weight: bold;
+     background-color: #eeeeff;
+     border: 1px solid #002;
+     display: none;
 }
 
 div.toolbar a:link {
-border: 1px outset #ddddc0;
-padding: 0px 5px 1px 5px;
-line-height: 250%;
-background-color: #bbf;
-text-decoration: none;
-	border-radius: 4px;
-	-moz-border-radius: 4px;
-	-webkit-border-radius: 4px;	
+     border: 1px outset #ddddc0;
+     padding: 0px 5px 1px 5px;
+     line-height: 250%;
+     background-color: #bbf;
+     text-decoration: none;
+     border-radius: 4px;
+     -moz-border-radius: 4px;
+     -webkit-border-radius: 4px;
 }
 
 div.toolbar a:visited {
-line-height: 250%;
-background-color: #ddf;
+     line-height: 250%;
+     background-color: #ddf;
 }
 
 div.toolbar a:hover{
-border: 1px solid #eeeeff;
-line-height: 250%;
-background-color: #003;
-color:#ff6600
+     border: 1px solid #eeeeff;
+     line-height: 250%;
+     background-color: #003;
+     color: #ff6600;
 }
-a:active{color:#900}	
+
+a:active{
+     color: #900;
+}
 
 div.routersummaryouter {
-	float: left;
-	width: 215px;
-	margin: 0 0 10px 20px;
-	padding: 0px 0 0 0;
-	border: 0;
-	clear: left; /* fixes a bug in Opera */
-	text-align: center;
-	display: block;
+     float: left;
+     width: 215px;
+     margin: 0 0 10px 20px;
+     padding: 0px 0 0 0;
+     border: 0;
+     clear: left;/* fixes a bug in Opera */
+     text-align: center;
+     display: block;
 }
 
 div.routersummary {
-/*	margin: 0px 20px 20px 0px; */
-	width: auto;
-	padding: 10px;
-	text-align: center;
-	border: 1px solid #000033;
-	background-color: #ddddff;
-	color: black;
-	font-size: 8pt;
-	clear: left; /* fixes a bug in Opera */
-	-moz-border-radius: 4px 4px 4px 4px;
-	-webkit-border-radius: 4px 4px 4px 4px; 
-	float: left;
-  -moz-box-shadow: inset 0px 0px 16px 1px #eef; 
-	background-image: url('images/lightbluetile.png');
+/*  margin: 0px 20px 20px 0px; */
+     width: auto;
+     padding: 10px;
+     text-align: center;
+     border: 1px solid #000033;
+     background-color: #ddddff;
+     color: black;
+     font-size: 8pt;
+     clear: left;/* fixes a bug in Opera */
+     -moz-border-radius: 4px;
+     -webkit-border-radius: 4px;     
+     float: left;
+     -moz-box-shadow: inset 0px 0px 16px 1px #eef;
+     background-image: url('images/lightbluetile.png');
 }
 
 div.warning {
-	margin: 0em 1em 1em 224px;
-	padding: .5em 1em;
-	background-color: #ffefef;
-	border: medium solid #ffafaf;
-	text-align: left;
-	color: inherit;
+     margin: 0em 1em 1em 224px;
+     padding: .5em 1em;
+     background-color: #ffefef;
+     border: medium solid #ffafaf;
+     text-align: left;
+     color: inherit;
 }
 
 div.main {
-	margin: 0px 0px 20px 220px;
-	padding: 0 15px 15px 25px;
-	background-color: #fff;
-	text-align: left;
-	color: #000011;
-	width: auto;
-/*	overflow-x: scroll; */
+     margin: 0px 0px 20px 220px;
+     padding: 0 15px 15px 25px;
+     background-color: #fff;
+     text-align: left;
+     color: #000011;
+     width: auto;
+/*  overflow-x: scroll; */
 }
 
 div.main hr {
-color: #003;
-background-color: #003;
-height: 1px;
-border: 0px solid #003;
-margin: 10px 0;
+     color: #003;
+     background-color: #003;
+     height: 1px;
+     border: 0px solid #003;
+     margin: 10px 0;
 }
 
 div.main textarea {
-	width: 100% !important;
+     width: 100% !important;
 }
 
 div.news {
-	margin: 0px 15px 20px 245px;
-	padding: 20px 30px 20px 30px;
-	border: 1px solid #003;
-  background-color: #ffeeaa;
-	color: #001;
-	border-radius: 4px;
-	-moz-border-radius: 4px;
-	-webkit-border-radius: 4px;	
-	text-align: justify;
+     margin: 0px 15px 20px 245px;
+     padding: 20px 30px 20px 30px;
+     border: 1px solid #003;
+     background-color: #ffeeaa;
+     color: #001;
+     border-radius: 4px;
+     -moz-border-radius: 4px;
+     -webkit-border-radius: 4px;
+     text-align: justify;
 }
 
 div.confignav {
-	padding: 10px;
-	margin: 0 0px 25px 0;
-	background-color: #ddddff;
-	-moz-border-radius: 4px;
-	-webkit-border-radius: 4px;
-	border: 1px solid #000022;
-	background-image: url('images/tabletile.png');
+     padding: 10px;
+     margin: 0 0px 25px 0;
+     background-color: #ddddff;
+     -moz-border-radius: 4px;
+     -webkit-border-radius: 4px;
+     border: 1px solid #000022;
+     background-image: url('images/tabletile.png');
 }
 
 div.configure {
-	padding: 1em;
-	margin: 10px 0px 25px 0;
-	background-color: #ddf;
-	-moz-border-radius: 4px;
-	border: 1px solid #000022;
+     padding: 1em;
+     margin: 10px 0px 25px 0;
+     background-color: #ddf;
+     -moz-border-radius: 4px;
+     border: 1px solid #000022;
 }
 
 div.messages {
-	padding: 0 10px 0 15px;
-	margin: 10px 0 20px 0;	
-	background-color: #ddf;
-	background: url(images/tabletile_alt.png);
-	-moz-border-radius: 4px;
-	border: 1px solid #000033;
-	text-size: 9pt;
+     padding: 0 10px 0 15px;
+     margin: 10px 0 20px 0;
+     background-color: #ddf;
+     background: url(images/tabletile_alt.png);
+     -moz-border-radius: 4px;
+     border: 1px solid #000033;
+     text-size: 9pt;
 }
 
 div.messages span.error {
-	color: #d00000;
+     color: #d00000;
 }
 
 div.messages span.notice {
-	font-style: italic;
+     font-style: italic;
 }
 
-div.messages	li {
-	text-align: justify;
-	font-weight: bold;
-  list-style-image: url(images/warning.png);
-	margin: 0 10px 0 30px;
-	padding: 5px;
-	}
+div.messages li {
+     text-align: justify;
+     font-weight: bold;
+     list-style-image: url(images/warning.png);
+     margin: 0 10px 0 30px;
+     padding: 5px;
+}
 
 table {
-	border-collapse: collapse;
-	width: 100%;
-  border: 1px solid #000022;
-	margin: 5px 0px 5px 0px;
-	cell-padding: 1px;
-	font-size: 7pt;
-	}
-
-	th {
-	padding: 4px;
-	color: black;
-	background-color: #b4c8ff;
-	text-align: center;
-	background-image: url('images/tabletitlelight.png');
-	background-repeat:repeat-x;
-	font-size: 8pt;
-	}
-	
-
-tr:nth-child(even) {
-	background-image: url('images/tabletile.png');
-  }	
- 
- tr:nth-child(odd) {
-	background-image: url('images/tabletile_alt.png');
-  }	
-   
-	td {
-	padding: 5px;
-	color: black;
-	/*background-color: #ffc;*/
-	text-align: left;
-	}
-	
-	tt {
-	font-size: 8pt;
-	font-family: "Lucida Console", Courier, mono;
-	font-weight: bold;
-	color: green;
-	/*background: black;*/
-	padding: 1px 5px;
-	}
-	
-	li {
-	text-align: left;
-	list-style-type:square;
-	margin: 2px 20px 0px 30px;
-	padding: 1px 20px 1px 0px;
-	}
-	
-	ol {
-	white-space: pre-wrap;
-	display: inline;
-	margin: 2px 0 0 0;
-	padding 10px 0 0 20px;
-	display: inline;
-	}
-	
-	ul {
-	display: inline;
-	margin: 5px 0 0 0;
-	}
-
-code {
-  text-align: left;
-	font-size: 8pt;
-	font-family: "Lucida Console", Courier, mono;
+     border-collapse: collapse;
+     width: 100%;
+     border: 1px solid #000022;
+     margin: 5px 0px 5px 0px;
+     cell-padding: 1px;
+     font-size: 7pt;
 }
 
-a:link{color:#007}
-a:visited{color:#606}
-a:hover{color:#ff6600}
-a:active{color:#900}
+th {
+     padding: 4px;
+     color: black;
+     background-color: #b4c8ff;
+     text-align: center;
+     background-image: url('images/tabletitlelight.png');
+     background-repeat: repeat-x;
+     font-size: 8pt;
+}
+
+tr:nth-child ( even ) {
+     background-image: url('images/tabletile.png');
+}
+
+tr:nth-child ( odd ) {
+     background-image: url('images/tabletile_alt.png');
+}
+
+td {
+     padding: 5px;
+     color: black;
+/*background-color: #ffc;*/
+     text-align: left;
+}
+
+tt {
+     font-size: 8pt;
+     font-family: "Lucida Console", "DejaVu Sans Mono", Courier, mono;
+     font-weight: bold;
+     color: green;
+/*background: black;*/
+     padding: 1px 5px;
+}
+
+li {
+     text-align: left;
+     list-style-type: square;
+     margin: 2px 20px 0px 30px;
+     padding: 1px 20px 1px 0px;
+}
+
+ol {
+     white-space: pre-wrap;
+     display: inline;
+     margin: 2px 0 0 0;
+     padding: 10px 0 0 20px;
+}
+
+ul {
+     display: inline;
+     margin: 5px 0 0 0;
+}
+
+code {
+     text-align: left;
+     font-size: 8pt;
+     font-family: "Lucida Console", "DejaVu Sans Mono", Courier, mono;
+}
+
+a:link{
+     color: #007;
+}
+
+a:visited{
+     color: #606;
+}
+
+a:hover{
+     color: #ff6600;
+}
+
+a:active{
+     color: #900;
+}
 
 .links {
-list-style-image: url(images/link.png);
-margin: 0 5px 0 0px;
-padding: 0px 5px;
+     list-style-image: url(images/link.png);
+     margin: 0 5px 0 0px;
+     padding: 0px 5px;
 }
 
 p {
-text-align: justify;
+     text-align: justify;
 }
 
 h1 {
-	text-align: left;
-	color: #000022;
-	padding: 10px;
-	margin-bottom: 25px;
-	margin-top: 0px;
-	margin-left: 245px;
-	margin-right: 15px;
-	font-size: 16pt;
-	font-weight: bold;
-	font-style: normal;
-	letter-spacing: 0.06em;
-	text-transform: uppercase;
-	text-shadow: 0px 0px 1px rgba(0, 0, 176, 0.9);
-  white-space: normal; 
-	background-color: #ddddff;
-	border: 1px solid #002;
-	border-radius: 4px;
-	-moz-border-radius: 4px;
-	-webkit-border-radius: 4px;	
-	background-image: url('images/lightbluetile.png');
+     text-align: left;
+     color: #000022;
+     padding: 10px;
+     margin-bottom: 25px;
+     margin-top: 0px;
+     margin-left: 245px;
+     margin-right: 15px;
+     font-size: 16pt;
+     font-weight: bold;
+     font-style: normal;
+     letter-spacing: 0.06em;
+     text-transform: uppercase;
+     text-shadow: 0px 0px 1px rgba(0, 0, 176, 0.9);
+     white-space: normal;
+     background-color: #ddddff;
+     border: 1px solid #002;
+     border-radius: 4px;
+     -moz-border-radius: 4px;
+     -webkit-border-radius: 4px;
+     background-image: url('images/lightbluetile.png');
 }
 
 h2{
-  color: #000011;
-  background-color: #ddf;
-	background-image: url('images/tabletile.png');
-	text-shadow: 0px 0px 1px rgba(0, 0, 128, 0.9);
-	border-bottom-width: 1px;
-	border-bottom-style: solid;
-	border-bottom-color: #000022;
-	padding: 5px 10px;
-	wordwrap: none;
-	border: 1px solid #002;
-	border-radius: 4px;
-	-moz-border-radius: 4px;
-	-webkit-border-radius: 4px;	
-} 
+     color: #000011;
+     background-color: #ddf;
+     background-image: url('images/tabletile.png');
+     text-shadow: 0px 0px 1px rgba(0, 0, 128, 0.9);
+     border-bottom-width: 1px;
+     border-bottom-style: solid;
+     border-bottom-color: #000022;
+     padding: 5px 10px;
+     wordwrap: none;
+     border: 1px solid #002;
+     border-radius: 4px;
+     -moz-border-radius: 4px;
+     -webkit-border-radius: 4px;
+}
 
 h2 a:hover {
-  color: #ff6600;
-	text-shadow: 0px 0px 1px rgba(255, 255, 72, 0.9);
-	border-bottom-width: 1px;
-	border-bottom-style: solid;
-	border-bottom-color: #000022;
-	padding-bottom: 5px;
-} 
+     color: #ff6600;
+     text-shadow: 0px 0px 1px rgba(255, 255, 72, 0.9);
+     border-bottom-width: 1px;
+     border-bottom-style: solid;
+     border-bottom-color: #000022;
+     padding-bottom: 5px;
+}
 
 h3 {
-	border-bottom-width: 1px;
-	border-bottom-style: solid;
-	border-bottom-color: #000022;
-	padding-bottom: 5px;
-}	
-	
-button { 
-border: 1px outset #ddddc0;
-padding: 0px 3px 1px 3px;
-line-height: 250%;
-background-color: #bbf !important;
-text-decoration: none;
-	border-radius: 4px;
-	-moz-border-radius: 4px;
-	-webkit-border-radius: 4px;	
-font-size: 8pt;
-font-weight: bold;
-margin: 2px 3px;
-text-align: center;
+     border-bottom-width: 1px;
+     border-bottom-style: solid;
+     border-bottom-color: #000022;
+     padding-bottom: 5px;
+}
+
+button {
+     border: 1px outset #ddddc0;
+     padding: 0px 3px 1px 3px;
+     line-height: 250%;
+     background-color: #bbf !important;
+     text-decoration: none;
+     border-radius: 4px;
+     -moz-border-radius: 4px;
+     -webkit-border-radius: 4px;
+     font-size: 8pt;
+     font-weight: bold;
+     margin: 2px 3px;
+     text-align: center;
 }
 
 button:hover{
-border: 1px solid #001;
-line-height: 250%;
-background-color: #003;
-color:#ff6600
+     border: 1px solid #001;
+     line-height: 250%;
+     background-color: #003;
+     color: #ff6600;
 }
 
-	.underline {
-	 border-bottom: 1px solid #000022;
-	 padding: 5px 0px 5px 0px;
-	 margin: 0px 0px 10px 0px;
-	 -moz-border-radius: 4px 4px 4px 4px;
-	 }
-	 
+.underline {
+     border-bottom: 1px solid #000022;
+     padding: 5px 0px 5px 0px;
+     margin: 0px 0px 10px 0px;
+}
+
 .langbox {
-	  margin: 4px 2px 15px 5px;
-	  padding: 7px 5px 5px 5px;
-	  color: #001;
-	  font-size: 7pt;
-	  width: 120px;
-	  text-align: center;
-		float: right;
+     margin: 4px 2px 15px 5px;
+     padding: 7px 10px 5px 10px;
+     color: #001;
+     font-size: 7pt;
+     width: 120px;
+     text-align: center;
+     float: right;
 }
 
 hr {
-color: #003;
-background-color: #003;
-height: 1px;
-border: 0px solid #003;
-margin: 10px 0;
+     color: #003;
+     background-color: #003;
+     height: 1px;
+     border: 0px solid #003;
+     margin: 10px 0;
 }
 
 input {
-background-color: #eef;
-color: #003;
-margin: 5px 10px 5px 10px;
-font-family: "Lucida Sans Unicode", Verdana, Tahoma, Helvetica, sans-serif;
-font-weight: bold;
-border: 1px solid #001;
+     background-color: #eef;
+     color: #003;
+     margin: 5px 10px 5px 10px;
+     font-family: "Lucida Sans Unicode", Verdana, Tahoma, Helvetica, sans-serif;
+     font-weight: bold;
+     border: 1px solid #001;
 /*border: 1px outset #ddddc0;*/
-padding: 0px 2px 1px 2px;
+     padding: 0px 2px 1px 2px;
 /*line-height: 250%;*/
-text-decoration: none;
-	border-radius: 4px;
-	-moz-border-radius: 4px;
-	-webkit-border-radius: 4px;	
+     text-decoration: none;
+     border-radius: 4px;
+     -moz-border-radius: 4px;
+     -webkit-border-radius: 4px;
 }
 
 submit {
-background-color: #f00;
-color: #eef;
-margin: 10px 2px 10px 0;
-font-family: "Lucida Sans Unicode", Verdana, Tahoma, Helvetica, sans-serif;
-font-weight: bold;
-border: 1px solid #001;
+     background-color: #f00;
+     color: #eef;
+     margin: 10px 2px 10px 0;
+     font-family: "Lucida Sans Unicode", Verdana, Tahoma, Helvetica, sans-serif;
+     font-weight: bold;
+     border: 1px solid #001;
 /*border: 1px outset #ddddc0;*/
-padding: 0px 2px 1px 2px;
+     padding: 0px 2px 1px 2px;
 /*line-height: 250%;*/
-background-color: #001;
-text-decoration: none;
-	border-radius: 4px;
-	-moz-border-radius: 4px;
-	-webkit-border-radius: 4px;	
+     text-decoration: none;
+     border-radius: 4px;
+     -moz-border-radius: 4px;
+     -webkit-border-radius: 4px;
 }
 
 select {
- background-color: #eef;
- color: #003;
- margin: 5px 10px 5px 10px;
- font-family: "Lucida Sans Unicode", Verdana, Tahoma, Helvetica, sans-serif;
- border: 1px solid #001;
+     background-color: #eef;
+     color: #003;
+     margin: 5px 10px 5px 10px;
+     font-family: "Lucida Sans Unicode", Verdana, Tahoma, Helvetica, sans-serif;
+     border: 1px solid #001;
 }
 
 textarea {
- padding: 5px;
- margin: 5px 0;
- background-color: #eef;
- color: #003;
-	border-radius: 4px;
-	-moz-border-radius: 4px;
-	-webkit-border-radius: 4px;	
-	font-family: "Lucida Console", Courier, mono;
-	font-size: 8pt;
+     padding: 5px;
+     margin: 5px 0;
+     background-color: #eef;
+     color: #003;
+     border-radius: 4px;
+     -moz-border-radius: 4px;
+     -webkit-border-radius: 4px;
+     font-family: "Lucida Console", "DejaVu Sans Mono", Courier, mono;
+     font-size: 8pt;
 }
 
-form {
-}
+form {}
