--- a/installer/resources/themes/console/dark/default.css
+++ b/installer/resources/themes/console/dark/default.css
@@ -1,302 +1,306 @@
 body {
-	margin :  0px;
-	padding : 0px;
-	text-align : center;
-	font-family : "Lucida Sans Unicode", Verdana, Helvetica, sans-serif;
-	background-color : #001;
-	color :  #000000;
-    font-size : 11pt;
-    
-    /* we've avoided Tantek Hacks so far,
+     margin: 0px;
+     padding: 0px;
+     text-align: center;
+     font-family: "Lucida Sans Unicode", Verdana, Helvetica, sans-serif;
+     background-color: #001;
+     color: #000000;
+     font-size: 11pt;
+/* we've avoided Tantek Hacks so far,
     ** but we can't avoid using the non-w3c method of 
     ** box rendering. (and therefore one of mozilla's
     ** proprietry -moz properties (which hopefully they'll
     ** drop soon).
     */
-    -moz-box-sizing : border-box;
-    box-sizing :      border-box;
+     -moz-box-sizing: border-box;
+     box-sizing: border-box;
 }
 
 div {
-    -moz-box-sizing : border-box;
-    box-sizing :      border-box;
+     -moz-box-sizing: border-box;
+     box-sizing: border-box;
 }
 
 h4, label {
-    margin :   0;
-    padding :  4px 2px 2px 0px;
-    float :   left;
-    width :  150px;
+     margin: 0;
+     padding: 4px 2px 2px 0px;
+     float: left;
+     width: 150px;
 /*    height :  24px; */
-    font-weight :  bold;
-    text-align :  right;
-    font-size :   1.0em;
-    -moz-box-sizing: border-box;
-    box-sizing :     border-box;
-		padding: 5px 0 !important;
+     font-weight: bold;
+     text-align: right;
+     font-size: 1.0em;
+     -moz-box-sizing: border-box;
+     box-sizing: border-box;
 }
 
 h4 {
-    font-size : 14px;
-    text-align : center;
-    width : 100%;
-		border: 1px solid #99f;
-		margin: 5px 0 15px 0;
-	  background: url(images/tabletitledark.png);
-	  background-color: #002;
-		text-transform: uppercase;
-	  text-shadow: 0px 0px 2px rgba(255, 255, 255, 0.9);
-		letter-spacing: 0.08em;
-    -moz-box-shadow: inset 0px 0px 4px 0px #009; 
-	  border-radius: 4px;
-	  -moz-border-radius: 4px;
-	  -webkit-border-radius: 4px;	
+     font-size: 14px;
+     text-align: center;
+     width: 100%;
+     border: 1px solid #99f;
+     margin: 5px 0 15px 0;
+     background: url(images/tabletitledark.png);
+     background-color: #002;
+     text-transform: uppercase;
+     text-shadow: 0px 0px 2px rgba(255, 255, 255, 0.9);
+     letter-spacing: 0.08em;
+     -moz-box-shadow: inset 0px 0px 4px 0px #009;
+     border-radius: 4px;
+     -moz-border-radius: 4px;
+     -webkit-border-radius: 4px;
 }
 
 a {
-    text-decoration : none;
+     text-decoration: none;
 }
 
 form {
-	margin : 0px;
+     margin: 0px;
 }
 
 textarea, input, select, button, a {
-    font-family : "Lucida Sans Unicode", Verdana, Helvetica, sans-serif;
-    -moz-box-sizing : border-box;
-    box-sizing :      border-box;
-    font-size : 1.0em;
-    float : left;
+     font-family: "Lucida Sans Unicode", Verdana, Helvetica, sans-serif;
+     -moz-box-sizing: border-box;
+     box-sizing: border-box;
+     font-size: 1.0em;
+     float: left;
 }
 
 button {
-    float : none;
+     float: none;
 }
 
 textarea {
-    border : 1px solid #9999ff;
+     border: 1px solid #9999ff;
 }
 
 br {
-    clear : left;
+     clear: left;
 }
-
 /*
 div.statusNotRunning {
     float : left;
     width : 82px;
     height : 24px;
-	color : #dd0000;
-		font-weight: bold;
+    color : #dd0000;
+        font-weight: bold;
 }
 div.statusRunning {
     float : left;
     width : 82px;
     height : 24px;
-	  color : #00dd00;
-		font-weight: bold;	
+      color : #00dd00;
+        font-weight: bold;  
 }
 div.statusStarting {
     float : left;
     width : 82px;
     height : 24px;
-	  color : #339933;
+      color : #339933;
 }
 */
 
 div.statusNotRunning {
-    float : left;
-    width : 78px;
-    height : 24px;
-    overflow : hidden;
-	color : #dd0000;
-    padding-top: 24px;
-    margin-top: 6px;
-    background: url('images/console_status_stopped.png') 0 0 no-repeat;
+     float: left;
+     width: 78px;
+     height: 24px;
+     overflow: hidden;
+     color: #dd0000;
+     padding-top: 24px;
+     margin-top: 6px;
+     background: url('images/console_status_stopped.png') 0 0 no-repeat;
 }
+
 div.statusRunning {
-    float : left;
-    width : 78px;
-    height : 24px;
-    overflow : hidden;
-	color : #00dd00;
-    padding-top: 24px;
-    margin-top: 6px;
-    background: url('images/console_status_running.png') 0 0 no-repeat;
+     float: left;
+     width: 78px;
+     height: 24px;
+     overflow: hidden;
+     color: #00dd00;
+     padding-top: 24px;
+     margin-top: 6px;
+     background: url('images/console_status_running.png') 0 0 no-repeat;
 }
+
 div.statusStarting {
-    float : left;
-    width : 78px;
-    height : 24px;
-    overflow : hidden;
-	color : #339933;
-    padding-top: 24px;
-    margin-top: 6px;
-    background: url('images/console_status_starting.png') 0 0 no-repeat;
+     float: left;
+     width: 78px;
+     height: 24px;
+     overflow: hidden;
+     color: #339933;
+     padding-top: 24px;
+     margin-top: 6px;
+     background: url('images/console_status_starting.png') 0 0 no-repeat;
 }
 
 hr {
-    display : none;
+     display: none;
 }
 
 .separator, .subdivider {
-    clear : both;
-    height : 1px;
-    margin : 3px 0px 3px 0px;
-    border-bottom : 1px solid #99f;
+     clear: both;
+     height: 1px;
+     margin: 3px 0px 3px 0px;
+     border-bottom: 1px solid #99f;
 }
 
 .subdivider {
-    border-bottom : 1px solid #99f;
-    padding: 5px 0px 0px 0px;
+     border-bottom: 1px solid #99f;
+     padding: 5px 0px 0px 0px;
 }
 
 .freetext {
-    width : 150px;
+     width: 150px;
 /*    height : 22px; */
-    border : 1px solid #9999ff;
-		padding: 2px;
-		margin: 4px 0 2px 4px;
-		background-color: #002;
-		font-family: "Lucida Console", Courier, mono;
-		font-weight: bold;
+     border: 1px solid #9999ff;
+     padding: 2px;
+     margin: 4px 0 2px 4px;
+     background-color: #002;
+     font-family: "Lucida Console", Courier, mono;
+     font-weight: bold;
 }
 
 .control {
-    margin :  0 0 0 4px;
-    padding : 0 0 2px 0;
-    overflow : hidden;
-    height : 20px; 
-    width :  60px;
-    font-weight : normal;
-    background-color :  #bbbbff;
-    color : black;
-    border : 1px outset #ddddc0;
-    text-align :  center;
-    white-space : nowrap;
-    -moz-border-radius: 4px;
-		border 1px solid #000022;
-		font-weight: bold;
-    margin-top: 8px;
+     margin: 0 0 0 4px;
+     padding: 0 0 2px 0;
+     overflow: hidden;
+     height: 20px;
+     width: 60px;
+     font-weight: normal;
+     background-color: #bbbbff;
+     color: black;
+     border: 1px outset #ddddc0;
+     text-align: center;
+     white-space: nowrap;
+     -moz-border-radius: 4px;
+     margin-top: 8px;
 }
 
 .control:link {
-    color: #001;
+     color: #001;
 }
 
 .control:hover {
-
-border: 1px solid #eeeeff;
-background-color: #003;
-color:#ff6600
+     border: 1px solid #eeeeff;
+     background-color: #003;
+     color: #ff6600;
 }
 
 .control:active {
-    border : 2px inset;
+     border: 2px inset;
 }
 
 .control:visited {
-    color: #001;
+     color: #001;
 }
 
 .panel {
-    width : 800px;
-    margin : 16px auto 16px auto;
-    overflow : hidden;
-	  text-align : left;
-    font-size : 0.8em;
-		color: white;
-	  background-color : #002;
-	  background: url(images/darkbluebg.png);
-	  -moz-border-radius: 4px 4px 4px 4px;
-	  border: 1px solid #99f;
-	  padding: 10px 20px;
+     width: 800px;
+     margin: 16px auto 16px auto;
+     overflow: hidden;
+     text-align: left;
+     font-size: 0.8em;
+     color: white;
+     background-color: #002;
+     background: url(images/darkbluebg.png);
+     -moz-border-radius: 4px 4px 4px 4px;
+     border: 1px solid #99f;
+     padding: 10px 20px;
 }
 
 .panel .footer {
-    float : right;
-    padding : 4px;
+     float: right;
+     padding: 4px;
 }
 
 .toolbox {
-    float : right;
+     float: right;
 }
 
 .rowItem {
-    width : 750px;
-    float :  left;
-    margin :  0px;
+     width: 750px;
+     float: left;
+     margin: 0px;
 }
 
 .comment {
-    font-style : italic;
+     font-style: italic;
 }
 
 .text {
-    height : 24px;
-    width : 150px;
-    padding : 4px 0 0 2px;
-    float : left;
-    margin : 0;
+     height: 24px;
+     width: 150px;
+     padding: 4px 0 0 2px;
+     float: left;
+     margin: 0;
 }
 
 .accessKey {
-    text-decoration : underline;
+     text-decoration: underline;
 }
 
 #globalOperationsPanel {
-    background-color : #003;
-  	border : 1px solid #f22;
-	  background: url(images/lightbluetile.png);
-		-moz-box-shadow: inset 0px 0px 4px 0px #f00; 
-		padding: 5px 20px 11px 10px !important;
+     background-color: #003;
+     border: 1px solid #f22;
+     background: url(images/lightbluetile.png);
+     -moz-box-shadow: inset 0px 0px 4px 0px #f00;
+     padding: 5px 20px 11px 10px !important;
 }
 
 #globalOperationsPanel .control {
-    width : 100px;
+     width: 100px;
 }
 
 .header {
-	  -moz-border-radius: 4px 4px 4px 4px;
-		border 1px solid #ff0000;
+     -moz-border-radius: 4px 4px 4px 4px;
+     border: 1px solid #ff0000;
 }
 
-a:link{color:#99f}
-a:visited{color:#7bb}
-a:hover{color:#ff6600}
-a:active{color:#900}
+a:link{
+     color: #99f;
+}
+
+a:visited{
+     color: #7bb;
+}
+
+a:hover{
+     color: #ff6600;
+}
+
+a:active{
+     color: #900;
+}
 
 input {
-background-color: #002;
-color: #eef;
-margin: 0 2px 0 2px;
-font-family: "Lucida Sans Unicode", Verdana, Tahoma, Helvetica, sans-serif;
-font-weight: bold;
-border: 1px solid #99f;
-padding: 0px 2px 1px 2px;
-background-color: #001;
-text-decoration: none;
+     background-color: #002;
+     color: #eef;
+     margin: 0 2px 0 2px;
+     font-family: "Lucida Sans Unicode", Verdana, Tahoma, Helvetica, sans-serif;
+     font-weight: bold;
+     border: 1px solid #99f;
+     padding: 0px 2px 1px 2px;
+     text-decoration: none;
 }
 
 input hover {
-background-color: #f00;
-color: #eef;
-margin: 0 2px 0 2px;
-font-family: "Lucida Sans Unicode", Verdana, Tahoma, Helvetica, sans-serif;
-font-weight: bold;
-border: 1px solid #99f;
-padding: 0px 2px 1px 2px;
-background-color: #001;
-text-decoration: none;
+     background-color: #f00;
+     color: #eef;
+     margin: 0 2px 0 2px;
+     font-family: "Lucida Sans Unicode", Verdana, Tahoma, Helvetica, sans-serif;
+     font-weight: bold;
+     border: 1px solid #99f;
+     padding: 0px 2px 1px 2px;
+     text-decoration: none;
 }
 
 select {
- background-color: #001;
- color: #eef;
-margin: 8px 2px 0 2px;
- font-family: "Lucida Sans Unicode", Verdana, Tahoma, Helvetica, sans-serif;
- border: 1px solid #99f;
+     background-color: #001;
+     color: #eef;
+     margin: 8px 2px 0 2px;
+     font-family: "Lucida Sans Unicode", Verdana, Tahoma, Helvetica, sans-serif;
+     border: 1px solid #99f;
 }
 
-form {
-}
+form {}
