Those pesky critters keep messing with mah code!
Monotone-Parent: 3d08e8db96a70a9594abe373e8f59569c8de7ab8
Monotone-Revision: 1d3fdcc1394982ef7bc5c12b7aa163919c533096

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2009-07-13T01:15:33
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/light/console.css
+++ b/installer/resources/themes/console/light/console.css
@@ -27,15 +27,12 @@ pre {
 
 div.logo {
      float: left;
-     left: 10px;
-     top: 0px;
      padding: 10px 10px 10px 14px;
      text-align: left;
      font-color: #fff;
      border: 0px solid #f00;
-     margin: 0px;
-     background-color: #003;
-     display: block;
+     margin: 0 20px 0 14px;
+     display: none !important;
 }
 
 div.toolbar {
@@ -44,7 +41,7 @@ div.toolbar {
      font-weight: bold;
      background-color: #eeeeff;
      border: 1px solid #002;
-     display: none;
+     display: none !important;
 }
 
 div.toolbar a:link {
@@ -56,6 +53,7 @@ div.toolbar a:link {
      border-radius: 4px;
      -moz-border-radius: 4px;
      -webkit-border-radius: 4px;
+     display: none !important;
 }
 
 div.toolbar a:visited {
@@ -367,13 +365,14 @@ button:hover{
 }
 
 .langbox {
-     margin: 4px 2px 15px 5px;
+     margin: 4px 2px 4px 5px;
      padding: 7px 10px 5px 10px;
      color: #001;
      font-size: 7pt;
      width: 120px;
      text-align: center;
      float: right;
+     valign: middle;
 }
 
 hr {
